--- a/models/category/columns.yaml
+++ b/models/category/columns.yaml
@@ -1,9 +1,15 @@
 columns:
+
     id:
         label: ID
         type: number
         searchable: true
+        invisible: true
         sortable: true
+    image:
+        label: 图片
+        type: partial
+        path: ~/plugins/samubra/training/controllers/baseview/list/_imageResize.htm
     name:
         label: 分类名称
         type: text
@@ -54,3 +60,4 @@ columns:
         label: 更新时间
         type: datetime
         searchable: true
+
