--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,16 +1,20 @@
 plugin:
-    name: 培训管理系统
+    name: 培训管理报名系统
     description: 'samubra.training::lang.plugin.description'
     author: samubra
     icon: oc-icon-coffee
     homepage: ''
 navigation:
-    training-man-menu:
+    training:
         label: 培训管理
         url: samubra/training/categories
         icon: icon-life-ring
         sideMenu:
-            training-category:
+            categories:
                 label: 培训类别
                 url: samubra/training/categories
                 icon: icon-sitemap
+            organization:
+                label: 发证机构
+                url: samubra/training/organizations
+                icon: icon-suitcase
