--- a/models/teacher/columns.yaml
+++ b/models/teacher/columns.yaml
@@ -1,4 +1,8 @@
 columns:
+    image:
+        label: 照片
+        type: partial
+        path: ~/plugins/samubra/training/controllers/baseview/list/_imageResize.htm
     name:
         label: 姓名
         type: text
@@ -14,24 +18,26 @@ columns:
         type: text
         searchable: true
         sortable: true
+    edu_type:
+        label: 学历
+        type: partial
+        path: ~/plugins/samubra/training/controllers/teachers/list/_edu_type.htm
+        searchable: true
+        sortable: true
     job_title:
         label: 职称
+        type: partial
+        path: ~/plugins/samubra/training/controllers/teachers/list/_job_title.htm
+        sortable: true
+
+    company:
+        label: 单位名称
         type: text
         searchable: true
         sortable: true
     phone:
         label: 联系电话
         type: number
-        searchable: true
-        sortable: true
-    company:
-        label: 单位名称
-        type: text
-        searchable: true
-        sortable: true
-    edu_type:
-        label: 学历
-        type: text
         searchable: true
         sortable: true
     id:
