完成设置静态页面

--- a/models/course/columns.yaml
+++ b/models/course/columns.yaml
@@ -11,7 +11,8 @@ columns:
         sortable: true
     course_type:
         label: 课程类型
-        type: text
+        type: partial
+        path: ~/plugins/samubra/training/controllers/courses/list/_course_type.htm
         searchable: true
         sortable: true
     teacher_id:
