--- a/models/course/columns.yaml
+++ b/models/course/columns.yaml
@@ -12,7 +12,7 @@ columns:
     course_type:
         label: 课程类型
         type: partial
-        path: ~/plugins/samubra/training/controllers/courses/list/_course_type.htm
+        path: $/samubra/training/controllers/courses/list/_course_type.htm
         searchable: true
         sortable: true
     teacher_id:
