完成操作证后台部分功能

--- a/models/certificate/fields.yaml
+++ b/models/certificate/fields.yaml
@@ -1,46 +1,69 @@
 fields:
-    id_num:
-        label: 证件号码
-        span: auto
-        required: 1
-        type: text
     id_type:
         label: 证件类型
-        span: auto
+        span: storm
+        cssClass: col-md-4
         required: 1
+        default: 1
         type: balloon-selector
+    id_num:
+        label: 证件号码
+        required: 1
+        type: text
+        span: storm
+        cssClass: col-md-4
+    num:
+        label: 编号
+        type: text
+        span: storm
+        readOnly: true
+        comment: 系统自动生成
+        cssClass: col-md-4
     name:
         label: 姓名
-        span: auto
+        span: storm
+        cssClass: col-md-2
         required: 1
         type: text
     phone:
         label: 联系电话
-        span: auto
+        span: storm
+        cssClass: col-md-2
         required: 1
         type: text
     address:
         label: 联系地址
-        span: auto
+        span: storm
+        cssClass: col-md-2
         required: 1
         type: text
     company:
         label: 单位名称
-        span: auto
+        span: storm
+        cssClass: col-md-2
         required: 1
         type: text
+    edu_type:
+        label: 文化程度
+        span: storm
+        cssClass: col-md-4
+        type: dropDown
+        required: 1
     category:
         label: 培训类别
-        span: auto
+        span: storm
+        cssClass: col-md-6
         nameFrom: name
         descriptionFrom: description
         prompt: '点击 %s 选择培训类别'
         list: $/samubra/training/models/category/columns.yaml
         required: 1
         type: recordfinder
+        conditions: active = "1"
     organization:
         label: 发证机构
-        span: auto
+        span: storm
+        cssClass: col-md-6
         nameFrom: name
         descriptionFrom: description
         prompt: '点击 %s 选择发证机构'
@@ -49,21 +72,31 @@ fields:
         type: recordfinder
     first_get_date:
         label: 初领证日期
-        span: auto
+        span: storm
+        cssClass: col-md-3
         mode: date
         type: datepicker
     print_date:
         label: 发证日期
-        span: auto
+        span: storm
+        cssClass: col-md-3
         mode: date
         type: datepicker
     review_date:
         label: 复审日期
-        span: auto
+        span: storm
+        cssClass: col-md-3
         mode: date
         type: datepicker
     invalid_date:
         label: 有效期期
-        span: auto
+        span: storm
+        cssClass: col-md-3
         mode: date
         type: datepicker
+    active:
+        label: 是否有效
+        span: storm
+        cssClass:  col-md-3
+        type: balloon-selector
+
