继续完善后台部分内容

--- a/models/category/fields.yaml
+++ b/models/category/fields.yaml
@@ -14,6 +14,7 @@ fields:
         label: 缩略名
         span: left
         type: text
+        preset: name
         comment: 留空则自动生成
     image:
         label: 图片
