添加培训记录字段验证，去除重复添加

--- a/models/project/fields.yaml
+++ b/models/project/fields.yaml
@@ -93,6 +93,9 @@ fields:
         size: ''
         span: full
         type: textarea
-    status_change:
-        type: partial
-        path: status
+tabs:
+    fields:
+        status_change:
+            type: partial
+            path: status
+            tab: 培训状态
