--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -42,3 +42,6 @@
 1.0.17:
     - 'Updated table samubra_training_records'
     - builder_table_update_samubra_training_records.php
+1.0.18:
+    - 'Updated table samubra_training_records'
+    - builder_table_update_samubra_training_records2.php
