--- a/controllers/plans/config_form.yaml
+++ b/controllers/plans/config_form.yaml
@@ -5,7 +5,13 @@ defaultRedirect: samubra/training/plans
 create:
     redirect: 'samubra/training/plans/update/:id'
     redirectClose: samubra/training/plans
+    title: 创建培训方案
+    flashSave: 培训方案创建成功！
 update:
-    redirect: samubra/training/plans
+    redirect: 'samubra/training/plans/update/:id'
     redirectClose: samubra/training/plans
-preview: {  }
+    title: 修改培训方案信息
+    flashSave: 培训方案信息修改成功！
+    flashDelete: 培训方案已成功删除！
+preview:
+    title: 查看培训方案详情
