--- a/controllers/projectcourses/config_form.yaml
+++ b/controllers/projectcourses/config_form.yaml
@@ -5,7 +5,13 @@ defaultRedirect: samubra/training/projectcourses
 create:
     redirect: 'samubra/training/projectcourses/update/:id'
     redirectClose: samubra/training/projectcourses
+    title: 添加日程安排
+    flashSave: 日程安排添加成功！
 update:
-    redirect: samubra/training/projectcourses
+    redirect: 'samubra/training/projectcourses/update/:id'
     redirectClose: samubra/training/projectcourses
-preview: {  }
+    title: 修改日程安排信息
+    flashSave: 日程安排信息修改成功！
+    flashDelete: 日程安排已成功删除！
+preview:
+    title: 查看日程安排详情
