--- a/controllers/records/config_form.yaml
+++ b/controllers/records/config_form.yaml
@@ -5,6 +5,13 @@ defaultRedirect: samubra/training/records
 create:
     redirect: 'samubra/training/records/update/:id'
     redirectClose: samubra/training/records
+    title: 添加培训记录
+    flashSave: 培训记录添加成功！
 update:
-    redirect: samubra/training/records
+    redirect: 'samubra/training/records/update/:id'
     redirectClose: samubra/training/records
+    title: 修改培训记录信息
+    flashSave: 培训记录修改成功！
+    flashDelete: 培训记录已成功删除！
+preview:
+    title: 查看培训记录详情
