--- a/controllers/certificates/config_list.yaml
+++ b/controllers/certificates/config_list.yaml
@@ -1,4 +1,5 @@
 title: 培训证书
+filter: config_filter.yaml
 modelClass: Samubra\Training\Models\Certificate
 list: $/samubra/training/models/certificate/columns.yaml
 recordUrl: 'samubra/training/certificates/update/:id'
